--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,14 +12,17 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
 
-      - shell: "bash"
+      - name: "Build"
+        shell: "bash"
         run: |
           set -x
+          sudo apt-get -qqqq update
           sudo apt-get -qqqq install libwxgtk3.0-gtk3-dev
           mkdir build
           cd build
           cmake ..
           cmake --build .
 
-      - shell: "bash"
-        run: "./datadirswx"
+      - name: "Test"
+        shell: "bash"
+        run: "./build/datadirswx"
