--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,9 @@ jobs:
         run: |
           set -x
           sudo apt-get -qqqq update
-          sudo apt-get -qqqq install libwxgtk3.0-gtk3-dev
+          sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.0-gtk3-dev
+          ls -l /home/runner
+          ls -l /home/runner/.config
           mkdir build
           cd build
           cmake ..
