--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
         shell: "bash"
         run: |
           set -x
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install tree wxwidgets
+          HOMEBREW_NO_AUTO_UPDATE=1 brew install wxwidgets
           mkdir build
           cd build
           cmake ..
@@ -45,4 +45,4 @@ jobs:
 
       - name: "Test"
         shell: "bash"
-        run: "./build/datadirswx"
+        run: "./build/datadirswx.app/Contents/MacOS/datadirswx"
