--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,15 @@ if(wxWidgets_USE_FILE)
     include(${wxWidgets_USE_FILE})
 endif()
 target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})
+
+
+
+enable_testing()
+
+add_test(NAME nominal COMMAND $<TARGET_FILE:${PROJECT_NAME}>)
+
+add_test(NAME home COMMAND $<TARGET_FILE:${PROJECT_NAME}>)
+set_property(TEST home PROPERTY ENVIRONMENT HOME=/tmp)
+
+add_test(NAME appdata COMMAND $<TARGET_FILE:${PROJECT_NAME}>)
+set_property(TEST appdata PROPERTY ENVIRONMENT APPDATA=Z:\\User\\Me\\AppData\\Roaming)
