--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,9 +17,7 @@ jobs:
           sudo apt-get -qqqq update
           sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.0-gtk3-dev
           xdg-user-dirs-update --force
-          mkdir build
-          cd build
-          cmake ..
+          cmake .
           cmake --build .
 
       - name: "Test"
@@ -38,9 +36,7 @@ jobs:
         run: |
           set -x
           HOMEBREW_NO_AUTO_UPDATE=1 brew install wxwidgets
-          mkdir build
-          cd build
-          cmake ..
+          cmake .
           cmake --build .
 
       - name: "Test"
@@ -66,9 +62,7 @@ jobs:
         shell: "msys2 {0}"
         run: |
           set -x
-          mkdir build
-          cd build
-          cmake ..
+          cmake .
           cmake --build .
 
       - name: "Test"
