--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,6 +52,7 @@ jobs:
 
       - uses: "msys2/setup-msys2@v2"
         with:
+          release: false
           pacboy: >-
             toolchain:p
             cmake:p
