--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,10 @@ jobs:
         run: |
           set -x
           sudo apt-get -qqqq update
-          sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.0-gtk3-dev
+          sudo apt-get -qqqq install software-properties-common
+          sudo add-apt-repository "deb http://mirror.math.princeton.edu/pub/ubuntu kinetic main"
+          sudo apt-get -qqqq update
+          sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.2-dev
           xdg-user-dirs-update --force
           cmake .
           cmake --build .
