--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
           set -x
           sudo apt-get -qqqq update
           sudo apt-get -qqqq install software-properties-common
-          sudo add-apt-repository "deb http://mirror.math.princeton.edu/pub/ubuntu kinetic main"
+          sudo add-apt-repository "deb http://mirror.math.princeton.edu/pub/ubuntu kinetic main universe"
           sudo apt-get -qqqq update
           sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.2-dev
           xdg-user-dirs-update --force
