--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,7 +78,7 @@ jobs:
         run: |
           Set-PSDebug -Trace 1
           mkdir D:\a\_temp\foo
-          [System.Environment]::SetEnvironmentVariable("APPDATA", "D:\a\_temp\foo", [System.EnvironmentVariableTarget]::Machine)
+          .\testenv.ps1 -RunAsAdmin
           $env:APPDATA
 
       - name: "Test2"
