--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -9,7 +9,10 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
       - run: |
+          Set-PSDebug -Trace 1
+
           Get-ChildItem -Path C:\msys64 -Force
+
           $Env:Path
           $Reg = "Registry::HKLM\System\CurrentControlSet\Control\Session Manager\Environment"
           (Get-ItemProperty -Path "$Reg" -Name PATH).Path
