--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -23,5 +23,5 @@ jobs:
           ls usr/bin
           ls mingw64/*
 
-          $Env:PATH = "C:\msys\usr\bin;$Env:PATH"
+          $Env:PATH = "C:\msys64\usr\bin;$Env:PATH"
           pacman.exe --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-wxwidgets3.2-gtk3
