--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,9 @@
 ---
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#      - "*"
+  push:
+    branches:
+      - "*"
 
 jobs:
   "build-ubuntu":
