--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,6 @@ cmake_minimum_required(VERSION 3.22.1)
 
 set(CMAKE_FIND_PACKAGE_PREFER_CONFIG TRUE)
 
-if(APPLE AND NOT CMAKE_OSX_DEPLOYMENT_TARGET)
-    if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
-        set(CMAKE_OSX_DEPLOYMENT_TARGET 12.0 CACHE STRING "iOS Deployment Target")
-    else()
-        set(CMAKE_OSX_DEPLOYMENT_TARGET 10.10 CACHE STRING "macOS Deployment Target")
-    endif()
-endif()
-
 project(datadirswx)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -19,12 +11,10 @@ set(SRC_FILES
 datadirswx.cpp
 )
 
-add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE ${SRC_FILES})
+add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 find_package(wxWidgets COMPONENTS core base REQUIRED)
-if(wxWidgets_USE_FILE)
-    include(${wxWidgets_USE_FILE})
-endif()
+include(${wxWidgets_USE_FILE})
 target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})
 
 
