--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,8 @@ jobs:
           sudo apt-get -qqqq install software-properties-common
           sudo add-apt-repository "deb http://mirror.math.princeton.edu/pub/ubuntu kinetic main universe"
           sudo apt-get -qqqq update
-          sudo apt-get -qqqq install xdg-user-dirs libwxgtk3.2-dev
+          sudo apt-get -qqqq install tree xdg-user-dirs libwxgtk3.2-dev
+          apt info xdg-user-dirs
           xdg-user-dirs-update --force
           saved_home=$HOME
           mkdir home
@@ -29,7 +30,7 @@ jobs:
           HOME=$(pwd)
           xdg-user-dirs-update --force
           xdg-user-dirs-update --set DOCUMENTS $HOME/MyDocs
-          mv Documents MyDocs
+          #mv Documents MyDocs
           tree -a
           cat .config/user-dirs.dirs
           cd -
