--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,6 +33,7 @@ jobs:
           "HOME": "${{ github.workspace }}/home"
         run: |
           set -x
+          unset XDG_CONFIG_HOME
           cd ~
           pwd
           env | grep -i xdg
