--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,28 +33,28 @@ jobs:
           "HOME": "${{ github.workspace }}/home"
         run: |
           set -x
-          unset XDG_CONFIG_HOME
           cd ~
-          pwd
-          env | grep -i xdg
-          echo $HOME
+          unset XDG_CONFIG_HOME
           xdg-user-dirs-update --force
           xdg-user-dirs-update --set DOCUMENTS $HOME/MyDocs
-          cat .config/user-dirs.dirs
           tree -a
+          cat .config/user-dirs.dirs
           mv Documents MyDocs
           cd -
 
       - name: "Build"
         shell: "bash"
         run: |
-          HOME=$saved_home
+          set -x
           cmake .
           cmake --build .
 
       - name: "Test"
         shell: "bash"
-        run: "ctest -V"
+        run: |
+          set -x
+          unset XDG_CONFIG_HOME
+          ctest -V
 
 
 
